test/langtools/tools/javac/specialConstantFolding/IndyCrashTest.out
IndyCrashTest.java:31:57: compiler.warn.member.not.found.at.class: foo, class, IndyCrashTest.IntrinsicTestHelper
IndyCrashTest.java:31:58: compiler.err.method.handle.not.suitable.indy: ()java.lang.invoke.CallSite
IndyCrashTest.java:30:55: compiler.warn.member.not.found.at.class: foo, class, IndyCrashTest.IntrinsicTestHelper
1 error
2 warnings
